# Cpp-Validation

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
include/: validation.h  validationfilesystem.h  validationparsing.h
src/: validationfilesystem.cpp  validationparsing.cpp
tests/: CMakeLists.txt  test_validation.cpp
